--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "[demo](https://juliamokh.github.io/weather-app/)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel ./src/index.html",
+    "build": "parcel build ./src/index.html --public-url ./",
+    "push-gh-pages": "push-dir --dir=dist --branch=gh-pages"
   },
   "repository": {
     "type": "git",
