--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "weather-app",
   "version": "1.0.0",
   "description": "[demo](https://juliamokh.github.io/weather-app/)",
-  "main": "index.html",
+  "main": "index.js",
   "scripts": {
-    "start": "parcel ./src/index.html",
-    "prebuild-dev": "node node.prebuild.js",
-    "build-dev": "parcel build ./src/index.html --no-minify --public-url ./",
-    "prebuild": "node node.prebuild.js",
-    "build": "parcel build ./src/index.html --public-url ./"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --hot --inline --open --mode development"
   },
   "repository": {
     "type": "git",
@@ -16,8 +14,21 @@
   },
   "author": "juliamokh",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/juliamokh/weather-app/issues"
+  },
+  "homepage": "https://github.com/juliamokh/weather-app#readme",
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1"
+    "babel-loader": "^7.1.3",
+    "babel-preset-env": "^1.6.1",
+    "clean-webpack-plugin": "^0.1.18",
+    "css-loader": "^0.28.10",
+    "file-loader": "^1.1.9",
+    "html-webpack-plugin": "github:webpack-contrib/html-webpack-plugin",
+    "style-loader": "^0.20.2",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-server": "^3.0.0"
   }
 }
